--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-query": "^3.25.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0"
   },
